namespace CarRentalAggregator.Application.Interfaces
{
    public interface IAuthService
    {
    }
}
