namespace CarRentalAggregator.Application.Interfaces
{
    public interface ICarService
    {
    }
}
