namespace CarRentalAggregator.Application.Interfaces
{
    public interface ICompanyService
    {
    }
}
