namespace CarRentalAggregator.Application.Interfaces
{
    public interface IJWTService
    {
    }
}
