namespace CarRentalAggregator.Application.Interfaces
{
    public interface IRentService
    {
    }
}
