namespace CarRentalAggregator.Application.Interfaces
{
    public interface IUserService
    {
    }
}
