using CarRentalAggregator.Application.Interfaces;

namespace CarRentalAggregator.Application.Services
{
    public class CompanyService : ICompanyService
    {
    }
}
