namespace CarRentalAggregator.Domain.Interfaces
{
    public interface ICarRepository : IRepository
    {
    }
}
