namespace CarRentalAggregator.Domain.Interfaces
{
    public interface ICompanyRepository : IRepository
    {
    }
}
