namespace CarRentalAggregator.Domain.Interfaces
{
    public interface IRentRepository : IRepository
    {
    }
}
