namespace CarRentalAggregator.Domain.Interfaces
{
    public interface IRepository
    {
    }
}
