namespace CarRentalAggregator.Domain.Interfaces
{
    public interface IUserRepository : IRepository
    {
    }
}
