using Microsoft.EntityFrameworkCore;

namespace CarRentalAggregator.Persistance
{
    public class AppDbContext : DbContext
    {
    }
}
