using CarRentalAggregator.Domain.Interfaces;

namespace CarRentalAggregator.Persistance.Repositories
{
    public class CarRepository : ICarRepository
    {
    }
}
